src/make.log
test.cc: In function ‘int main()’:
test.cc:23:3: error: ‘sys’ was not declared in this scope
   sys = ZuoPar::TransitionSystem<Action, State, ScoreContext, Input>();
   ^
test.cc:23:70: error: cannot allocate an object of abstract type ‘ZuoPar::TransitionSystem<Action, State, ScoreContext, Input>’
   sys = ZuoPar::TransitionSystem<Action, State, ScoreContext, Input>();
                                                                      ^
In file included from test.cc:1:0:
system/system.h:16:7: note:   because the following virtual functions are pure within ‘ZuoPar::TransitionSystem<Action, State, ScoreContext, Input>’:
 class TransitionSystem {
       ^
system/system.h:56:16: note: 	void ZuoPar::TransitionSystem<ActionType, StateType, ScoreContextType, InputType>::before_decoding(const InputType&, const action_sequence_t&) [with ActionType = Action; StateType = State; ScoreContextType = ScoreContext; InputType = Input; ZuoPar::TransitionSystem<ActionType, StateType, ScoreContextType, InputType>::action_sequence_t = std::vector<Action, std::allocator<Action> >]
   virtual void before_decoding(const InputType& input,
                ^
system/system.h:63:16: note: 	void ZuoPar::TransitionSystem<ActionType, StateType, ScoreContextType, InputType>::after_decoding(const InputType&, const action_sequence_t&) [with ActionType = Action; StateType = State; ScoreContextType = ScoreContext; InputType = Input; ZuoPar::TransitionSystem<ActionType, StateType, ScoreContextType, InputType>::action_sequence_t = std::vector<Action, std::allocator<Action> >]
   virtual void after_decoding(const InputType& input,
                ^
system/system.h:71:16: note: 	void ZuoPar::TransitionSystem<ActionType, StateType, ScoreContextType, InputType>::get_possible_actions(const StateType&) [with ActionType = Action; StateType = State; ScoreContextType = ScoreContext; InputType = Input]
   virtual void get_possible_actions(const StateType& item) = 0;
                ^
